# permkit

./: Cargo.toml  README.md  Taskfile.yml  flake.nix  taplo.toml
auth-macros/: Cargo.toml
auth-macros/src/: lib.rs
permission-macros/: Cargo.toml
permission-macros/src/: lib.rs
src/: lib.rs
tests/: permissions.rs
